<resources>

    <string name="app_name">Magic App</string>

    <!-- Use this to set app to user LIVE / SANDBOX urls for evrything -->
    <!-- True -> LIVE and False -> SANDBOX -->

    <string name="use_base_links">true</string>

    <!-- Currency Symbol -->

    <string name="currencySymbol">$</string>

    <!-- FCM Channel ID -->

    <string name="FCMChannel">MagicApp2018</string>

    <!-- Pagination Count -->

    <string name="perPageCount">20</string>

    <!-- Facebook id for unique identification-->

    <string name="facebook_app_id">322837404942844</string>


    <!-- Empty/Invalid String Messages-->

    <string name="emptyEmail">Please enter email.</string>
    <string name="invalidEmail">Please enter valid email address.</string>
    <string name="emptyHall">Please select hall.</string>
    <string name="emptyPassword">Please enter password.</string>
    <string name="emptyName">Please enter name.</string>
    <string name="emptySubject">Please enter subject.</string>
    <string name="emptyMessage">Please enter message.</string>
    <string name="emptyCardExpiry">Please enter expiry date.</string>
    <string name="invalidCardExpiry">Please enter valid expiry date.</string>
    <string name="emptyCardNo">Please enter card number.</string>
    <string name="emptyCardCVV">Please enter cvv number.</string>
    <string name="invalidCardCVV">Please enter min. 3 digit cvv number.</string>
    <string name="invalidCardDetails">Please enter valid card details.</string>
    <string name="invalidCardNo">Please enter 16 digit card number.</string>
    <string name="emptyMobile">Please enter mobile number.</string>
    <string name="invalidMobile">Please enter 10 digits mobile number.</string>
    <string name="emptyNewPassword">Please enter new password.</string>
    <string name="invalidPassword">Password should be min. 8 characters long.</string>
    <string name="emptyStudentId">Please enter student id.</string>
    <string name="emptyCouponCode">Please enter coupon code.</string>
    <string name="passNotMatched">Password mismatch. Please try again.</string>
    <string name="createPassNotMatched">Create password and confirm new password doesn\'t match. Please try again.</string>
    <string name="confirmPassNotMatched">New password and confirm new password doesn\'t match. Please try again.</string>
    <!-- Error Messages -->

    <string name="error_play_services">This app won\'t run unless you update Google Play Services.</string>
    <string name="api_error_internet">No internet connection. Please try again.</string>
    <string name="api_error_data">Data error. Please try again.</string>
    <string name="hall_closed_error">Hall is closed for selected date/time.</string>

    <!-- Others -->

    <string name="enter_email_address">Enter your email address</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_star">Email Address*</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="register_instructions">Enter your registered email address and we will send you the instructions on how to reset or change your password.</string>
    <string name="student_id">Student ID</string>
    <string name="student_id_star">Student ID*</string>
    <string name="create_password_star">Create Password*</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_star">Confirm Password*</string>
    <string name="register">Register</string>
    <string name="termsNotSelected">Please select \"I have read and agree to the Terms and Conditions.\" to proceed further.</string>
    <string name="termsAndConditions">I have read and agree to the Terms and Conditions.</string>
    <string name="type_your_search_here">Click here to search</string>
    <string name="home">HOME</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="cart">CART</string>
    <string name="profile">PROFILE</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <string name="special_instruction">Special Instructions</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="skip_login">Skip Login</string>
    <string name="fullmenu">FULL MENU</string>
    <string name="max_cards">Maximum saved cards limit reached</string>
    <!--<string name="login_profile">Please Login To\nManage Your Profile</string>-->
    <string name="login_profile">PLEASE LOGIN TO\nMANAGE YOUR PROFILE</string>
    <string name="login_notifications">PLEASE LOGIN TO\nMANAGE NOTIFICATIONS</string>

    <string name="nutrition_info">NUTRITIONAL INFORMATION</string>
    <string name="calories">Calories</string>
    <string name="daily_per">% DAILY VALUE</string>
    <string name="total_fat">Total Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="trans_fat">Trans Fat</string>
    <string name="chelosterol">Chelosterol</string>
    <string name="nutritional_desc">DESCRIPTION &amp; NUTRITIONS</string>
    <string name="clear_filter"><u>Reset Filter</u></string>

</resources>
