<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main View -->

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Logo View -->

            <ImageView
                android:src="@drawable/ic_logo_green"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_90sdp"/>

            <!-- Data View -->

            <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_primary_round"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:padding="@dimen/_20sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorWhite"
                        android:textAppearance="@style/MyCustomTextStyle.Bold"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:textSize="@dimen/_13ssp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/register_instructions"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:textAppearance="@style/MyCustomTextStyle.Light"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:layout_alignParentRight="true"
                        android:textSize="@dimen/_11ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <!-- Email View -->

                    <RelativeLayout
                        android:id="@+id/rl_email"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/bg_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_email"
                            android:hint="@string/enter_email_address"
                            android:textColorHint="@color/colorWhite"
                            android:textColor="@color/colorWhite"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/_35sdp"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:textAppearance="@style/MyCustomTextStyle.Light"
                            android:background="@color/colorPrimary"
                            android:textSize="@dimen/_11ssp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/ic_email"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_14sdp" />

                    </RelativeLayout>

                    <!---->

                    <Button
                        android:id="@+id/btn_reset"
                        android:text="@string/reset_password"
                        android:textAppearance="@style/MyCustomTextStyle.Bold"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/colorPrimary"
                        android:textAllCaps="false"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_below="@+id/txt_forgotpass"
                        android:background="@drawable/bg_white_round_complete"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_34sdp" />

                </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- ActionBar View -->

    <include
        android:id="@+id/actionbar"
        layout="@layout/sublayout_actionbar_backarrow_trans"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</RelativeLayout>