<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main View -->
    
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Logo View -->

            <ImageView
                android:src="@drawable/ic_logo_green"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_90sdp"/>

            <!-- Register Box View -->

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_primary_round"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:padding="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Email View -->

                <RelativeLayout
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/bg_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_email"
                        android:hint="@string/email_address_star"
                        android:textColorHint="@color/colorWhite"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_35sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textAppearance="@style/MyCustomTextStyle.Light"
                        android:background="@color/colorPrimary"
                        android:textSize="@dimen/_11ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_email"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_14sdp" />

                </RelativeLayout>

                <!-- Student Id View -->

                <RelativeLayout
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_student"
                        android:hint="@string/student_id_star"
                        android:textColorHint="@color/colorWhite"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_35sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textAppearance="@style/MyCustomTextStyle.Light"
                        android:background="@color/colorPrimary"
                        android:textSize="@dimen/_11ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_studentcard"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_15sdp" />

                </RelativeLayout>

                <!-- Password View -->

                <RelativeLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_pass1"
                        android:hint="@string/create_password_star"
                        android:textColorHint="@color/colorWhite"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_35sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textAppearance="@style/MyCustomTextStyle.Light"
                        android:background="@color/colorPrimary"
                        android:textSize="@dimen/_11ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_password"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_14sdp" />

                </RelativeLayout>

                <!-- Confirm Password View -->

                <RelativeLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_pass2"
                        android:hint="@string/confirm_password_star"
                        android:textColorHint="@color/colorWhite"
                        android:textColor="@color/colorWhite"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/_35sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textAppearance="@style/MyCustomTextStyle.Light"
                        android:background="@color/colorPrimary"
                        android:textSize="@dimen/_11ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_password"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_14sdp" />

                </RelativeLayout>

                <!-- Terms View -->

                <LinearLayout
                    android:layout_marginTop="@dimen/_25sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/chk_terms"
                        android:textColor="@color/colorGreyHeading"
                        android:textAppearance="@style/MyCustomTextStyle.Regular"
                        android:textSize="@dimen/_12ssp"
                        android:layout_alignParentRight="true"
                        app:buttonTint="@color/colorWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_terms"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="@string/termsAndConditions"
                        android:textColor="@color/colorWhite"
                        android:textAppearance="@style/MyCustomTextStyle.Light"
                        android:textSize="@dimen/_10ssp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <!-- Login Button View -->

                <Button
                    android:id="@+id/btn_register"
                    android:text="@string/register"
                    android:textAppearance="@style/MyCustomTextStyle.Bold"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/colorPrimary"
                    android:textAllCaps="false"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_white_round_complete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- ActionBar View -->

    <include
        android:id="@+id/actionbar"
        layout="@layout/sublayout_actionbar_backarrow_trans"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</RelativeLayout>